--- a/bootstrapChallenge.html
+++ b/bootstrapChallenge.html
@@ -9,7 +9,7 @@
 
     <body>
         
-        <div class='container'>
+        <div class='container-fluid'>
             
             <div class='row'>
                 <div class='col-xs-12 col-sm-12 col-md-6 col-lg-4 red'>
